# sql-python

./: README.md  pyproject.toml
notebooks/: 1-create-db.ipynb  2-read-data.ipynb  3-filter-data-where.ipynb
