[tool.poetry]
name = "sql-python"
version = "0.1.0"
description = ""
authors = ["Carlos Kidman <carlos@qap.dev>"]
readme = "README.md"
packages = [{include = "sql_python"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.2"
sqlmodel = "^0.0.14"
notebook = "^7.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
